src/test/ui/span/type-binding.stderr
error[E0220]: associated type `Trget` not found for `std::ops::Deref`
  --> $DIR/type-binding.rs:16:20
   |
16 | fn homura<T: Deref<Trget = i32>>(_: T) {}
   |                    ^^^^^^^^^^^ associated type `Trget` not found

error: aborting due to previous error

